# tbll

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  docker-compose.yml
.github/: actionlint.yml  dependabot.yml
.github/workflows/: build.yml  lint.yml  main.yml  pr.yml  release-crate.yml  release-crates.yml  release-packages.yml  release.yml  run.yml  test.yml
examples/: data-from-args.sh  data-from-other-cmds.sh  data-from-stdin.sh  movies.txt  no-headers.sh
src/: config.rs  lib.rs  main.rs  output.rs  types.rs
tests/: cli.rs
tests/common/: mod.rs
tests/data/: input-1.txt  input-2.txt  input-3.txt  input-4.txt  input-5.txt  input-with-whitespace.txt
