[package]
name = "tbll"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/dhth/tbll"
description = "tbll outputs data in tabular format"
homepage = "https://github.com/dhth/tbll"
license-file = "LICENSE"
keywords = [
    "cli",
    "table",
]
categories = [
    "command-line-utilities",
    "text-processing"
]
exclude = [
    ".github",
    "examples",
    "docker-compose.yml",
]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
tabled = "0.18.0"

[dev-dependencies]
assert_cmd = "2.0.16"
pretty_assertions = "1.4.1"

[[bin]]
name = "tbll"
path = "src/main.rs"
doc = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
