[package]
name = "tbll"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/dhth/tbll"
description = "tbll outputs data in tabular format"
homepage = "https://github.com/dhth/tbll"
license-file = "LICENSE"
keywords = [
    "cli",
    "table",
]
categories = [
    "command-line-utilities",
    "text-processing"
]
exclude = [
    ".github",
    "examples",
    "docker-compose.yml",
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
tabled = "0.19.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[[bin]]
name = "tbll"
path = "src/main.rs"
doc = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "fat"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
