[package]
name = "tbll"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/dhth/tbll"
description = "tbll outputs data in tabular format"
homepage = "https://github.com/dhth/tbll"
license-file = "LICENSE"
keywords = [
    "cli",
    "table",
]
categories = [
    "command-line-utilities",
    "text-processing"
]
exclude = [
    ".github",
    "examples",
    "docker-compose.yml",
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
tabled = "0.20.0"

[dev-dependencies]
insta = "1.43.2"
insta-cmd = "0.6.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[[bin]]
name = "tbll"
path = "src/main.rs"
doc = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
